# waterdb

./: Cargo.toml  README.md  data
config/: waterdb.yaml
docs/: storage.md
src/: error.rs  lib.rs  server.rs
src/common/: mod.rs  rc.rs  types.rs  value.rs
src/sql/: session.rs
src/sql/engine/: bitcask.rs  mod.rs
src/sql/parser/: create.rs  mod.rs  parse_defs.rs  parse_stage.rs  value.rs
src/sql/plan/: mod.rs
src/sql/types/: mod.rs
src/storage/: bincode.rs  keycode.rs  mod.rs
src/storage/buffer/: buffer_pool_manager.rs  disk_buffer_pool.rs  frame.rs  frame_manager.rs  mod.rs  page.rs  utils.rs
src/storage/db/: db.rs
src/storage/engine/: bitcask.rs  iterator.rs  log.rs  mod.rs
src/storage/mvcc/: iterator.rs  mvcc.rs  transaction.rs
src/storage/record/: mod.rs  record.rs  record_page_handler.rs
src/storage/table/: mod.rs  table.rs  table_meta.rs
